Fixed: Traversels button not showing on mobile view

--- a/src/components/css/carousel.css
+++ b/src/components/css/carousel.css
@@ -23,7 +23,7 @@
 
 .carousel-content {
   display: flex;
-  transition: all 250ms linear;
+  transition: all 210ms linear;
 }
 
 .content {
@@ -92,11 +92,4 @@
   font-size: 20px;
   background: transparent;
   border: 0px;
-}
-
-@media (hover: none) and (pointer: coarse) {
-  .left-arrow,
-  .right-arrow {
-    display: none;
-  }
 }
